--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,13 @@
     background: #9575CD ;
     color:floralwhite;
 }
-
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+.navbar-dark {
+     background-color: #512DA8;
+}
 address{
     font-size:80%;
     margin:0px;
