--- a/css/styles.css
+++ b/css/styles.css
@@ -57,3 +57,10 @@ address{
 .carousel-caption{
     padding-bottom: 5%;
 }
+
+#carouselButton{
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
