--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,16 +5,10 @@ $background-pale: #D1C4E9;
 // Height variables
 $carousel-item-height: 300px;
 
-
-
-
 @mixin zero-margin($pad-up-dn, $pad-left-right) {
 	margin:0px auto;
 	padding: $pad-up-dn $pad-left-right;
 }
-
-
-
 
 .row-header{
     @include zero-margin(0px,0px);
@@ -59,9 +53,6 @@ body{
     padding: 10px;
 }
 
-
-
-
 .carousel {
     background:$background-dark;
 
@@ -84,4 +75,16 @@ body{
     position: absolute;
     bottom: 0px;
     z-index: 1;
+}
+
+.modal-header {
+    background:$background-dark;
+    color:floralwhite;
+    .close {
+        color:floralwhite;
+    }
+}
+
+.modal-body {
+    background: $background-pale ;
 }
