Grunt removed + redisigned index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,14 @@
   min-height: 400px; }
 
 .footer {
-  background-color: #D1C4E9;
+  background-color: #c4cee9;
   margin: 0px auto;
   padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #9575CD;
+  background: #000000;
   color: floralwhite; }
 
 address {
@@ -29,7 +29,7 @@ body {
   z-index: 0; }
 
 .navbar-dark {
-  background-color: #512DA8; }
+  background-color: #1d034b; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,7 +38,7 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #512DA8; }
+  background: #1d034b; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
@@ -56,10 +56,10 @@ body {
   z-index: 1; }
 
 .modal-header {
-  background: #512DA8;
+  background: #1d034b;
   color: floralwhite; }
   .modal-header .close {
     color: floralwhite; }
 
 .modal-body {
-  background: #D1C4E9; }
+  background: #c4cee9; }
