--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
   z-index: 0; }
 
 .navbar-dark {
-  background-color: #1d034b; }
+  background-color: #070227; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,7 +38,7 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #1d034b; }
+  background: #070227; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
@@ -56,7 +56,7 @@ body {
   z-index: 1; }
 
 .modal-header {
-  background: #1d034b;
+  background: #070227;
   color: floralwhite; }
   .modal-header .close {
     color: floralwhite; }
